<resources>
    <string name="app_name">EmarsysMobileShop</string>
    <string name="action_add_to_cart">Add to cart</string>
    <string name="action_buy">Buy</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_ok">OK</string>
    <string name="login_message">Login was successful</string>
    <string name="logout_message">Logout successful</string>
    <string name="save_message">Save was successful</string>
    <string name="missed_customeremail_message">Please enter an email address and save</string>
    <string name="missed_customerid_message">Please enter a customer ID and save</string>
    <string name="buy_message">Buy was successful.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_yes">Yes</string>
    <string name="action_all">All</string>
    <string name="delete_message">Do you want delete this cart item?</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="user">User</string>
    <string name="cart_massage">Item added to cart</string>
    <string name="description"/>
    <string name="cart_recommended">You may also be interested in:</string>
    <string name="recommended">Recommended for you:</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_email">Customer email</string>
    <string name="login_with_email">Login with email</string>
    <string name="recommend_instruction">Item recommended instruction:</string>
    <string name="related">RELATED</string>
    <string name="also_bought">ALSO_BOUGHT</string>
    <string name="save">Save</string>
    <string name="show_ids">Show IDs</string>
    <string name="availability">Availability:</string>
    <string name="in_stock">IN STOCK</string>
    <string name="out_of_stock">OUT OF STOCK</string>
</resources>
